--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,57 @@
-# Dependencies
+# Node.js dependencies
 node_modules/
-/.pnp
-.pnp.js
 
-# Testing
-/coverage
+# Build output
+dist/
 
-# Production
-/build
-/dist
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Debug logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# IDE and editor files
-.idea/
-.vscode/
+# Local environment settings
+.env
+.env.local
+.env.*.local
+
+# Editor and OS files
 *.swp
 *.swo
+*.swn
+*.bak
 .DS_Store
 Thumbs.db
+.idea/
+.vscode/
 
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-out
-
-# Serverless directories
-.serverless/
-
-# Local Netlify folder
-.netlify
-
-# Logs
-logs
+# Cache and temp files
+/.cache
+/.output
+/.temp
+/tmp
+/pids
+*.pid
+*.seed
 *.log
-pnpm-debug.log*
-lerna-debug.log*
+*.gz
+.nyc_output
+coverage/
 
-dist-ssr
-*.local
+# Linting and formatting
+.eslintcache
+.stylelintcache
+.prettier_cache
 
-/cypress/videos/
-/cypress/screenshots/
+# Dependency locks (if using yarn or pnpm)
+yarn.lock
+pnpm-lock.yaml
 
-# Editor directories and files
-!.vscode/extensions.json
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Vite cache
+.vite/
 
+# TypeScript (if applicable)
 *.tsbuildinfo
+
+# Optional: Ignore local overrides
+local.settings.json
